[gd_scene load_steps=8 format=3 uid="uid://dhcqw7qbxpvtv"]

[ext_resource type="Script" path="res://UI/options.gd" id="1_6i6o4"]
[ext_resource type="Texture2D" uid="uid://byxogsybw301e" path="res://Other/Images/forge.png" id="2_8prsk"]
[ext_resource type="Script" path="res://UI/volume_slider.gd" id="3_4gdbj"]

[sub_resource type="SystemFont" id="SystemFont_4wqm4"]
font_names = PackedStringArray("Agency FB")

[sub_resource type="SystemFont" id="SystemFont_k3w06"]
font_names = PackedStringArray("Agency FB")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_iycx4"]
color = Color(0.847059, 0.368627, 0.72549, 1)
thickness = 25

[sub_resource type="SystemFont" id="SystemFont_dvhx5"]
font_names = PackedStringArray("Agency FB")

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6i6o4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8prsk")

[node name="Button Manager" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Button Manager"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Button Manager/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 18
alignment = 2

[node name="Back" type="Button" parent="Button Manager/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_fonts/font = SubResource("SystemFont_4wqm4")
theme_override_font_sizes/font_size = 64
text = "BACK"
alignment = 0

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_left = 379.0
offset_top = -3.0
offset_right = 673.0
offset_bottom = 149.0
theme_override_colors/font_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_fonts/font = SubResource("SystemFont_k3w06")
theme_override_font_sizes/font_size = 128
text = "Options"

[node name="Master Tag" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 204.0
offset_right = 319.0
offset_bottom = 356.0
theme_override_colors/font_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_fonts/font = SubResource("SystemFont_k3w06")
theme_override_font_sizes/font_size = 64
text = "Master:"

[node name="Master" type="HSlider" parent="Master Tag"]
layout_mode = 0
offset_left = 190.0
offset_top = -14.0
offset_right = 538.0
offset_bottom = 113.0
theme_override_styles/slider = SubResource("StyleBoxLine_iycx4")
max_value = 1.0
step = 0.001
script = ExtResource("3_4gdbj")
bus_name = "Master"

[node name="Resolutions Tag" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 504.0
offset_right = 319.0
offset_bottom = 656.0
theme_override_colors/font_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_fonts/font = SubResource("SystemFont_k3w06")
theme_override_font_sizes/font_size = 64
text = "Resolution: "

[node name="Resolutions" type="OptionButton" parent="Resolutions Tag"]
layout_mode = 2
offset_left = 228.0
offset_top = 24.0
offset_right = 635.0
offset_bottom = 71.0
theme_override_colors/font_disabled_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_hover_pressed_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_hover_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_pressed_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_focus_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_outline_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/icon_normal_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/icon_focus_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/icon_pressed_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/icon_hover_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/icon_disabled_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_fonts/font = SubResource("SystemFont_dvhx5")
theme_override_font_sizes/font_size = 32
selected = 0
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="Music Tag" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 304.0
offset_right = 319.0
offset_bottom = 456.0
theme_override_colors/font_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_fonts/font = SubResource("SystemFont_k3w06")
theme_override_font_sizes/font_size = 64
text = "Music:"

[node name="Music" type="HSlider" parent="Music Tag"]
layout_mode = 0
offset_left = 190.0
offset_top = -14.0
offset_right = 538.0
offset_bottom = 113.0
theme_override_styles/slider = SubResource("StyleBoxLine_iycx4")
max_value = 1.0
step = 0.001
script = ExtResource("3_4gdbj")
bus_name = "Music"

[node name="Sounds Tags" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 404.0
offset_right = 319.0
offset_bottom = 556.0
theme_override_colors/font_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_fonts/font = SubResource("SystemFont_k3w06")
theme_override_font_sizes/font_size = 64
text = "Sounds: "

[node name="Full Screen" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 604.0
offset_right = 319.0
offset_bottom = 756.0
theme_override_colors/font_color = Color(0.847059, 0.368627, 0.72549, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_fonts/font = SubResource("SystemFont_k3w06")
theme_override_font_sizes/font_size = 64
text = "Fullscreen:"

[node name="CheckButton" type="CheckButton" parent="Full Screen"]
layout_mode = 0
offset_left = 236.0
offset_top = 37.0
offset_right = 280.0
offset_bottom = 61.0

[node name="SFX" type="HSlider" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 390.0
offset_right = 554.0
offset_bottom = 517.0
theme_override_styles/slider = SubResource("StyleBoxLine_iycx4")
max_value = 1.0
step = 0.001
script = ExtResource("3_4gdbj")
bus_name = "sfx"

[connection signal="mouse_entered" from="Button Manager/HBoxContainer/VBoxContainer/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Button Manager/HBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Master Tag/Master" to="." method="_on_volume_value_changed"]
[connection signal="item_selected" from="Resolutions Tag/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="value_changed" from="Music Tag/Music" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="Full Screen/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="SFX" to="." method="_on_volume_value_changed"]
